New history activity + upgrade of the other layouts

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,10 +8,10 @@
     <string name="namePlaceholderText">Patrique</string>
     <string name="nameTextView">Nom:</string>
     <string name="bdTextView">Date de naissance:</string>
-    <string name="validateCharacterText">Créer le personnagae</string>
-    <string name="easyDifficulty">Facile</string>
-    <string name="normalDifficulty">Normale</string>
-    <string name="hardDifficulty">Difficile</string>
+    <string name="validateCharacterText">Créer le personnage</string>
+    <string name="easyTextView">Facile</string>
+    <string name="normalTextView">Normal</string>
+    <string name="difficultTextView">Difficile</string>
     <string name="oldSageClassName">Vieux sage</string>
     <string name="warriorClassName">Guerrier</string>
     <string name="wizardClassName">Sorcier</string>
@@ -22,15 +22,17 @@
     <string name="gameDetailsTextView">Tu...</string>
     <string name="gameDetailsTextViewEasy">Facile n\'est-ce pas?</string>
     <string name="gameDetailsTextViewHard">Difficile n\'est-ce pas ?</string>
-    <string name="titleFirstWarriorChallenge">Pemier challenge du guerrier !!</string>
+    <string name="titleFirstWarriorChallenge">CHALLENGE DU GUERRIER N°1</string>
     <string name="wizardChoiceAButtonText">Chocolat</string>
     <string name="wizardChoiceBButtonText">Petit nougats</string>
     <string name="wizardChoiceCButtonText">Boîte entière</string>
     <string name="wizardChoiceDButtonText">Bière</string>
-    <string name="titleFirstWizardChallenge">Premier challenge du sorcier !!</string>
+    <string name="titleFirstWizardChallenge">CHALLENGE DU SORCIER N°1</string>
     <string name="wizard1Question">Dans la chanson \"La sorcière Grabouilla\" de Gérard Dalton, qu\'est-ce que la sorcière appelée Grabouilla a trop mangé lui causant des maux d\'estomac ?</string>
-    <string name="titleSecondWizardChallenge">Le deuxième challenge du sorcier</string>
-    <string name="validateChallenge">Valider</string>
-    <string name="wizard2Challenge">Challenge : tout en vert !!</string>
-    <string name="secondWarriorChallengeTitle">Le deuxième challenge du guerrier !!</string>
+    <string name="titleSecondWizardChallenge">CHALLENGE DU SORCIER N°2</string>
+    <string name="validateChallenge">VALIDER</string>
+    <string name="wizard2Challenge">Challenge : mettez tout en vert !</string>
+    <string name="secondWarriorChallengeTitle">CHALLENGE DU GUERRIER N°2</string>
+    <string name="historicTitleTextView">HISTORIQUE DES PARTIES</string>
+    <string name="historicButton">HISTORIQUE</string>
 </resources>
