--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,15 @@
 
     <!--    SecondWarriorChallenge-->
     <string name="secondWarriorChallengeTitle">WARRIOR CHALLENGE N°2</string>
+    <string name="warriorImageDescription">A strong warrior</string>
+    <string name="binImageDescription">A bin</string>
+    <string name="questionWarriorChallenge2">Drag and drop the word in their right contener.</string>
+    <string name="warriorSecondChallengeWord">Steak</string>
+    <string name="warriorSecondChallengeWord1">Cardboard</string>
+    <string name="warriorSecondChallengeWord2">Apple (Rotten)</string>
+    <string name="warriorSecondChallengeWord3">Apple</string>
+    <string name="warriorSecondChallengeWord4">Apple (Device)</string>
+    <string name="warriorSecondChallengeWord5">Chocolate</string>
 
     <!--    End strings-->
     <string name="gameResultTextView">YOU XXX!</string>
@@ -49,6 +58,9 @@
     <string name="gameDetailsTextView">You ...</string>
     <string name="gameDetailsTextViewEasy">It\'s easy to win, isn\'t it?</string>
     <string name="gameDetailsTextViewHard">It\'s hard to win, isn\'t it?</string>
+
+
+
 
     <!-- Historic -->
     <string name="historicTitleTextView">GAMES HISTORY</string>
