hop hop hop tiens mon lapin

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -44,4 +44,7 @@
     <string name="warriorSecondChallengeWord3">Pomme</string>
     <string name="warriorSecondChallengeWord4">Pomme (Électronique)</string>
     <string name="warriorSecondChallengeWord5">Chocolat</string>
+    <string name="noAnswerMessage">Choisissez une réponse</string>
+    <string name="yummy">Miam!!</string>
+    <string name="gross">Berk!!</string>
 </resources>
