Almost done... (polishing each activity and layout)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -44,4 +44,30 @@
     <string name="warriorSecondChallengeWord3">Pomme</string>
     <string name="warriorSecondChallengeWord4">Pomme (Électronique)</string>
     <string name="warriorSecondChallengeWord5">Chocolat</string>
+    <string name="gameDetailsTextViewBaby">Vous tu devrez être à l\'école à cet âge là !</string>
+    <string name="gameDetailsTextViewOld">C\'est l\'heure de la soupe !</string>
+    <string name="gameDetailsTextWiz1">Vous êtes un sorcier et vous ne connaissez pas la sorcière Grabouilla?</string>
+    <string name="gameDetailsTextWar2">Comment êtes-vous encore en vie et en bonne santé ?</string>
+    <string name="gameDetailsTextWiz2">Vous êtes tellement mauvais en casse-têtes ...</string>
+    <string name="gameDetailsTextWar1">Tous les bons guerriers savent que tous les chemins mènent à Rome !</string>
+    <string name="placeOfDeathMenu">Menu principal</string>
+    <string name="placeOfDeathCharacter">Création de personnage</string>
+    <string name="placeOfDeathFirstChallenge">Premier challenge</string>
+    <string name="placeOfDeathSecondChallenge">Second challenge</string>
+    <string name="switchSpeakableText1">Interrupteur n°1</string>
+    <string name="switchSpeakableText2">Interrupteur n°2</string>
+    <string name="switchSpeakableText3">Interrupteur n°3</string>
+    <string name="switchSpeakableText4">Interrupteur n°4</string>
+    <string name="switchSpeakableText5">Interrupteur n°5</string>
+    <string name="switchSpeakableText6">Interrupteur n°6</string>
+    <string name="switchSpeakableText7">Interrupteur n°7</string>
+    <string name="switchSpeakableText8">Interrupteur n°8</string>
+    <string name="switchSpeakableText9">Interrupteur n°9</string>
+    <string name="switchSpeakableText10">Interrupteur n°10</string>
+    <string name="switchSpeakableText11">Interrupteur n°11</string>
+    <string name="switchSpeakableText12">Interrupteur n°12</string>
+    <string name="switchSpeakableText13">Interrupteur n°13</string>
+    <string name="switchSpeakableText14">Interrupteur n°14</string>
+    <string name="switchSpeakableText15">Interrupteur n°15</string>
+    <string name="switchSpeakableText16">Interrupteur n°16</string>
 </resources>
