--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -50,10 +50,10 @@
     <string name="gameDetailsTextWar2">Comment êtes-vous encore en vie et en bonne santé ?</string>
     <string name="gameDetailsTextWiz2">Vous êtes tellement mauvais en casse-têtes ...</string>
     <string name="gameDetailsTextWar1">Tous les bons guerriers savent que tous les chemins mènent à Rome !</string>
-    <string name="placeOfDeathMenu">Menu principal</string>
-    <string name="placeOfDeathCharacter">Création de personnage</string>
-    <string name="placeOfDeathFirstChallenge">Premier challenge</string>
-    <string name="placeOfDeathSecondChallenge">Second challenge</string>
+    <string name="placeOfDeathMenu">Mort à : Menu principal</string>
+    <string name="placeOfDeathCharacter">Mort à : Création de personnage</string>
+    <string name="placeOfDeathFirstChallenge">Mort à : Premier challenge</string>
+    <string name="placeOfDeathSecondChallenge">Mort à : Second challenge</string>
     <string name="switchSpeakableText1">Interrupteur n°1</string>
     <string name="switchSpeakableText2">Interrupteur n°2</string>
     <string name="switchSpeakableText3">Interrupteur n°3</string>
@@ -73,4 +73,8 @@
     <string name="noAnswerMessage">Choisissez une réponse</string>
     <string name="yummy">Miam!!</string>
     <string name="gross">Berk!!</string>
+    <string name="unknownCharacterName">Joueur inconnu</string>
+    <string name="unknownClassName">Classe inconnue</string>
+    <string name="victory">VICTOIRE</string>
+    <string name="mainMenuButton">MENU PRINCIPAL</string>
 </resources>
